--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,6 +72,6 @@ jobs:
                 cp "$GOPATH_HEAD/bin/${CIRCLE_PROJECT_REPONAME}" bin/invoicer;
                 docker build -t ${DOCKER_REPO}/${CIRCLE_PROJECT_REPONAME} .;
                 docker images --no-trunc | awk '/^app/ {print $3}' | sudo tee $CIRCLE_ARTIFACTS/docker-image-shasum256.txt;
-                docker push ${DOCKER_REPO}/${CIRCLE_PROJECT_REPONAME};
+                docker push ${DOCKER_REPO}/${CIRCLE_PROJECT_REPONAME}:latest;
             fi
             
