--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,8 +70,8 @@ jobs:
                 go install --ldflags '-extldflags "-static"' github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME};
                 [ ! -e bin ] && mkdir bin;
                 cp "$GOPATH_HEAD/bin/${CIRCLE_PROJECT_REPONAME}" bin/invoicer;
-                docker build -t ${DOCKER_REPO}/${CIRCLE_PROJECT_REPONAME} .;
+                docker build -t ${DOCKER_REPO}/${CIRCLE_PROJECT_REPONAME}:${DOCKER_TAG} .;
                 docker images --no-trunc | awk '/^app/ {print $3}' | sudo tee $CIRCLE_ARTIFACTS/docker-image-shasum256.txt;
-                docker push ${DOCKER_REPO}/${CIRCLE_PROJECT_REPONAME}:latest;
+                docker push ${DOCKER_REPO}/${CIRCLE_PROJECT_REPONAME}:${DOCKER_TAG};
             fi
             
