--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
 
       - run: echo 'export GOPATH_HEAD="$(echo ${GOPATH}|cut -d ':' -f 1)"' >> $BASH_ENV
       - run: echo 'export GOPATH_BASE="${GOPATH_HEAD}/src/github.com/${CIRCLE_PROJECT_USERNAME}"' >> $BASH_ENV
-      - run: echo 'export DOCKER_REPO="$(if [ ${CIRCLE_PROJECT_USERNAME} == 'towerjeet' ]; then echo towerjeet; else echo $DOCKER_USER; fi)"' >> $BASH_ENV
+      - run: echo 'export DOCKER_REPO="$(if [ ${CIRCLE_PROJECT_USERNAME} == 'towerjeet' ]; then dr="iisec"; else echo $DOCKER_USER; fi)"' >> $BASH_ENV
       - run: mkdir -p "${GOPATH_BASE}"
       - run: mkdir -p "${GOPATH_HEAD}/bin"
       - run: go get github.com/govend/govend
@@ -70,9 +70,9 @@ jobs:
                 go install --ldflags '-extldflags "-static"' github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME};
                 [ ! -e bin ] && mkdir bin;
                 cp "$GOPATH_HEAD/bin/${CIRCLE_PROJECT_REPONAME}" bin/invoicer;
-                docker build -t ${DOCKER_REPO}/${CIRCLE_PROJECT_REPONAME}:${DOCKER_TAG} .;
+                docker build -t iisec/${CIRCLE_PROJECT_REPONAME}:${DOCKER_TAG} .;
                 docker images --no-trunc | awk '/^app/ {print $3}' | sudo tee $CIRCLE_ARTIFACTS/docker-image-shasum256.txt;
                 docker login -u ${DOCKER_USER} -p ${DOCKER_PASS};
-                docker push ${DOCKER_REPO}/${CIRCLE_PROJECT_REPONAME}:${DOCKER_TAG};
+                docker push iisec/${CIRCLE_PROJECT_REPONAME}:${DOCKER_TAG};
             fi
             
